alignment of fixed menu and action bar
alignment of fixed menu and action bar

--- a/modules/Base/Box/theme/default.css
+++ b/modules/Base/Box/theme/default.css
@@ -109,7 +109,7 @@ button, .buttons, .btn, .modal-footer .btn+.btn {
 }
 
 .nav_title a {
-	padding: 7px 0 3px;
+	padding: 16px 0 16px 0;
 	text-align: center;
 	width: 25%;
 	font-size: 17px;
